--- a/interface.yaml
+++ b/interface.yaml
@@ -1,3 +1,9 @@
 name: odl-controller-api
 summary: Interface for intergrating with an OpenDayLight Controller RESTful API
 maintainer: James Page <james.page@ubuntu.com>
+ignore:
+  - 'units_tests'
+  - 'Makefile'
+  - '.testr.conf'
+  - 'test-requirements.txt'
+  - 'tox.ini'
